--- a/blog--ui/package.json
+++ b/blog--ui/package.json
@@ -9,15 +9,12 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
- 
   "dependencies": {
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
   },
-  
-
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
@@ -28,8 +25,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-vercel": "^9.0.1"
   }
-  
-  
 }
